[build-system]
requires = ["setuptools>=42", "cmake>=3.28"]
build-backend = "setuptools.build_meta"

[project]
name = "neml2"
version = "2.0.0"
authors = [
  { name = "Mark Messner", email = "messner@anl.gov" },
  { name = "Gary Hu", email = "thu@anl.gov" },
]
description = "GPU-enabled vectorized material modeling library"
readme = "README.md"
requires-python = ">=3.9"
