cmake_minimum_required(VERSION 3.14)
project(TEST LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_library(LIBC10 c10 HINTS ${LIBTORCH_DIR}/lib)

add_executable(test main.cxx)
target_include_directories(test SYSTEM PUBLIC ${LIBTORCH_DIR}/include)
target_link_directories(test PUBLIC ${LIBTORCH_DIR}/lib)
target_link_libraries(test PUBLIC ${LIBC10})
target_compile_definitions(test PUBLIC _GLIBCXX_USE_CXX11_ABI=1)
